8314078: HotSpotConstantPool.lookupField() asserts due to field changes in ConstantPool.cpp